--- a/style.css
+++ b/style.css
@@ -96,7 +96,79 @@ video{
     display: flex;
     align-items: center;
     height: 100%;
-    background: red;
-    padding: 10px;    
+    background: url('https://gems.peralta.edu/hubfs/unarmed%20security%20guard%20AdobeStock_297026455.jpeg#keepProtocol');
+    background-size: 100% 100%;
     border-radius: 5px;
+}
+
+.service-card p{
+    opacity: 0;
+}
+
+.service-card-txt-cont{
+    padding: 10px;  
+    height: 100%;
+    border-radius: 5px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 1s;
+}
+
+.service-card-text{
+    color: white;
+    transition: all 1s;
+}
+
+.service-card-txt-cont:hover{
+    background: rgba(0, 0, 0, 0.5);
+}
+
+.service-card:hover .service-card-text{
+    opacity: 1;
+}
+
+.map iframe{
+    width: 600px;
+    height: 450px;
+}
+
+.contact-us-cards{
+    height: 200px;
+    background-color: white;
+    border: 2px solid rgb(255, 193, 5);
+    border-radius: 5px;
+    transition: all 1s;
+}
+
+.contact-us-cards:hover{
+    font-size: 20px;
+}
+
+@media only screen and (max-width: 768px){
+    .contact-us{
+        width: 100%;
+    }
+
+    .contactus-cont1{
+        padding: 0px 0px;
+    }
+}
+
+.rev-container{
+    display: grid;
+    grid-auto-flow: column;
+    grid-auto-columns: max(30%, 375px);
+    overflow-x: auto;
+    overscroll-behavior-inline: contain;
+}
+
+.rev{
+    border-radius: 10px;
+    background: rgba(255, 193, 5, 0.2);
+}
+
+.rev-container::-webkit-scrollbar{
+    display: none;
 }
